Notes/Comments from review

--- a/resources/templates/logged-in.html
+++ b/resources/templates/logged-in.html
@@ -10,7 +10,7 @@
 </form>
 <form action="edit-post" method="post">
     <input type="number" placeholder="Post #" name="postid"/>
-    <input type="text" placeholder="Write new post" name="text" />
+    <input type="text" placeholder="Write new post" name="text" size="50"/>
     <button type="submit">Edit</button>
 </form>
 Posts by {{username}}: <br>
